Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6663588.out
T6663588.java:9:8: compiler.err.cyclic.inheritance: T6663588
1 error
